src/test/ui/parser/issues/issue-87217-keyword-order/wrong-async.stderr
error: expected one of `extern` or `fn`, found keyword `async`
  --> $DIR/wrong-async.rs:9:8
   |
LL | unsafe async fn test() {}
   | -------^^^^^
   | |      |
   | |      expected one of `extern` or `fn`
   | help: `async` must come before `unsafe`: `async unsafe`
   |
   = note: keyword order for functions declaration is `default`, `pub`, `const`, `async`, `unsafe`, `extern`

error: aborting due to previous error

